--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+	<header>
+		<ul>
+			<li>home</li>
+			<li>about</li>
+			<li>contact</li>
+		</ul>
+	</header>
 	<section>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
